compilateurDeca/src/test/deca/context/invalid/sans_objet/declaration/string_variable.deca
// Description:
//    Erreur de contexte : tentative d'utiliser 'string' comme type.
//
// Resultats:
//    Erreur contextuelle
//
// Historique:
//    cree le 13/01/2026

{
    string s = "Hello";
}